# MLOps_lab11

./: .dockerignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  main.py  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml  context.yaml
onnx_model/: classifier.onnx
sentiment_app/: app.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
